--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ email: travactory@travactory.com
 description: > # this means to ignore newlines until "baseurl:"
   We are tech company that does all the magic behind tix.nl, the #2 flight ticket site in The Netherlands. We do also hotel booking and car rentals, in the future - more travel stuff. We are agile, open and transparent. We love new technologies, good atmosphere of work. What we don't like is corporate politics and procedures.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+#url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+url: "http://travactory.github.io" # the base hostname & protocol for your site
 twitter_username: travactory
 github_username:  travactory
 facebook_username: travactory
