--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 #url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
 url: "http://travactory.github.io" # the base hostname & protocol for your site
-twitter_username: travactory
+#twitter_username: travactory
 github_username:  travactory
 facebook_username: travactory
 
